fixing issue with pixels and scrollbar

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+html {
+  overflow-y: scroll;
+}
 body {
     background-image: url("images/p1.jpg");
     background-size: 100%;
+    background-attachment: fixed;   
 }
 #logoimg {
     float: left;
